Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = None\n",
+    "x_values = list(map(lambda ))\n",
     "y_values = None"
    ]
   },
