--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(map(lambda movie: , ))\n",
+    "x_values = list(map(lambda movie: , scaled_movies))\n",
     "y_values = None"
    ]
   },
