--- a/index.ipynb
+++ b/index.ipynb
@@ -156,8 +156,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values = list(map(lambda movie: movie[''], scaled_movies))\n",
-    "y_values = None"
+    "x_values = list(map(lambda movie: movie['budget'], scaled_movies))\n",
+    "y_values = list"
    ]
   },
   {
