--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "x_values = list(map(lambda movie: movie['budget'], scaled_movies))\n",
-    "y_values = list(map(lambda movie: mo))"
+    "y_values = list(map(lambda movie: movie['domgross']))"
    ]
   },
   {
