Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "titles = list(map(lambda movie: movies['tit']))"
+    "titles = list(map(lambda movie: movies['title'], scaled_movi))"
    ]
   },
   {
