Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,8 @@
    "outputs": [],
    "source": [
     "def regression_formula(x):\n",
-    "    pass"
+    "    y_hat = \n",
+    "    return y"
    ]
   },
   {
