--- a/index.ipynb
+++ b/index.ipynb
@@ -435,8 +435,8 @@
    "outputs": [],
    "source": [
     "def regression_formula(x):\n",
-    "    y_hat = \n",
-    "    return y"
+    "    y_hat = 1.7\n",
+    "    return y_hat"
    ]
   },
   {
