Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,7 @@
    "outputs": [],
    "source": [
     "def regression_formula(x):\n",
-    "    y_hat = 1.7\n",
+    "    y_hat = 1.7*x + 10\n",
     "    return y_hat"
    ]
   },
