--- a/index.ipynb
+++ b/index.ipynb
@@ -732,7 +732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values and y_values and y_actual(13, x_values, y_values) # 26.0"
+    "y_actual(13, x_values, y_values) # 26.0"
    ]
   },
   {
