--- a/index.ipynb
+++ b/index.ipynb
@@ -761,7 +761,8 @@
    "source": [
     "def error(x_values, y_values, m, b, x):\n",
     "    y_hat = m*x + b\n",
-    "    y = y_actual(x, x_values, y_values)"
+    "    y = y_actual(x, x_values, y_values)\n",
+    "    "
    ]
   },
   {
