--- a/index.ipynb
+++ b/index.ipynb
@@ -762,7 +762,8 @@
     "def error(x_values, y_values, m, b, x):\n",
     "    y_hat = m*x + b\n",
     "    y = y_actual(x, x_values, y_values)\n",
-    "    "
+    "    error = \n",
+    "    return error"
    ]
   },
   {
