--- a/index.ipynb
+++ b/index.ipynb
@@ -827,7 +827,7 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    {'marker': {'color': 'red'}'x'}"
+    "    {'marker': {'color': 'red'}, 'mode''x'}"
    ]
   },
   {
