--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -827,8 +827,7 @@
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
-    "    y_hat = m*x + b\n",
-    "    y = \n",
+    "    y_hat = m*x\n",
     "    {'marker': {'color': 'red'}, 'mode': 'lines', 'name': 'error at ' + str(x), 'x':[x,x], 'y':[y, y_hat]}"
    ]
   },
