--- a/index.ipynb
+++ b/index.ipynb
@@ -822,21 +822,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def error_line_trace(x_values, y_values, m, b, x):\n",
     "    y_hat = m*x + b\n",
     "    y = y_actual(x, x_values, y_values)\n",
-    "    trace_implied = {'marker': {'color': 'red'}, 'mode': 'lines', 'name': 'error at ' + str(x), 'x':[x,x], 'y':[y, y_hat]}"
+    "    trace_implied = {'marker': {'color': 'red'}, 'mode': 'lines', 'name': 'error at ' + str(x), 'x':[x,x], 'y':[y, y_hat]}\n",
+    "    return trace_implied"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'marker': {'color': 'red'},\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'error at 120',\n",
+       " 'x': [120, 120],\n",
+       " 'y': [93.0, 214.0]}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "error_at_120m = error_line_trace(x_values, y_values, 1.7, 10, 120)\n",
     "\n",
