--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,7 +1139,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    error_line_trace(x_values, y_values, m, b, x)"
+    "    errerror_line_trace(x_values, y_values, m, b, x)"
    ]
   },
   {
