Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1139,7 +1139,7 @@
    "outputs": [],
    "source": [
     "def error_line_traces(x_values, y_values, m, b):\n",
-    "    traces_implied = list(map(lambda x_value: error_line_trace(x_value, y_values, m, b, x), "
+    "    traces_implied = list(map(lambda x_value: error_line_trace(x_value, y_values, m, b, x), x_values))"
    ]
   },
   {
