Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1204,9 +1204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-33-13c271b653fb>, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-13c271b653fb>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    movies_trace = trace_values(x_values, y_values, text=titles, name='movie data')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "#from plotly.offline import iplot, init_notebook_mode\n",
     "#init_notebook_mode(connected=True)\n",
@@ -1214,9 +1223,9 @@
     "#from graph import trace_values, m_b_trace, plot\n",
     "\n",
     "#if x_values and y_values:\n",
-    "    movies_trace = trace_values(x_values, y_values, text=titles, name='movie data')\n",
-    "    regression_trace = m_b_trace(1.7, 10, x_values, name='estimated revenue')\n",
-    "    plot([movies_trace, regression_trace, *errors_for_regression])"
+    "movies_trace = trace_values(x_values, y_values, text=titles, name='movie data')\n",
+    "regression_trace = m_b_trace(1.7, 10, x_values, name='estimated revenue')\n",
+    "plot([movies_trace, regression_trace, *errors_for_regression])"
    ]
   },
   {
