--- a/index.ipynb
+++ b/index.ipynb
@@ -1949,7 +1949,7 @@
    "outputs": [],
    "source": [
     "def squared_error(x_values, y_values, m, b, x):\n",
-    "    error(x_values, y_values, m, b, x):\n",
+    "    error = error(x_values, y_values, m, b, x)\n",
     "    y_hat = m*x + b\n",
     "    y = y_actual(x, x_values, y_values)\n",
     "    error = y - y_hat\n",
