--- a/index.ipynb
+++ b/index.ipynb
@@ -1987,7 +1987,7 @@
    "outputs": [],
    "source": [
     "def squared_errors(x_values, y_values, m, b):\n",
-    "    pass"
+    "    error"
    ]
   },
   {
