--- a/index.ipynb
+++ b/index.ipynb
@@ -2051,20 +2051,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def residual_sum_squares(x_values, y_values, m, b):\n",
     "    rss = sum(squared_errors(x_values, y_values, m, b))\n",
-    "    return r"
+    "    return rss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "327612.2800000001"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "residual_sum_squares(x_values, y_values, 1.7, 10) # 327612.2800000001"
    ]
